Fixed problem with overflow in y axis, added cleanChat()

--- a/public/chat.css
+++ b/public/chat.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    user-select: none;
 }
 
 @font-face {
@@ -176,7 +177,7 @@ h4 {
 
 .upper-chat {
     height: 90%;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
 }
 
 .lower-chat{
@@ -240,6 +241,20 @@ h4 {
       transform: translate3d(0, 0, 0);
     }
   }
+
+
+/* options menu */
+
+.options-menu {
+    position: relative;
+    left: 30em;
+}
+
+.options {
+    padding: 0.25em;
+}
+
+
 
 
 
